--- a/code/broadcaster/prj.conf
+++ b/code/broadcaster/prj.conf
@@ -15,7 +15,7 @@ CONFIG_NEWLIB_LIBC=y # TODO : optimize this
 CONFIG_BT=y
 CONFIG_BT_EXT_ADV=y
 CONFIG_BT_BROADCASTER=y
-CONFIG_BT_DEVICE_NAME="LRIMa test 1" #Change this for each device
+CONFIG_BT_DEVICE_NAME="LRIMa test 1" #Change this for each device (name must end with a number)
 
 # Low power config
 CONFIG_PM=y
