--- a/code/broadcaster/prj.conf
+++ b/code/broadcaster/prj.conf
@@ -10,6 +10,7 @@ CONFIG_I2C=y
 
 # Enable support for log
 CONFIG_NEWLIB_LIBC=y # TODO : optimize this
+CONFIG_NEWLIB_LIBC_FLOAT_PRINTF=y
 
 #BLE config
 CONFIG_BT=y
@@ -29,6 +30,14 @@ CONFIG_BLE_MIN_ADV_INTERVAL_MS=30
 CONFIG_BLE_MAX_ADV_INTERVAL_MS=40
 CONFIG_BLE_USER_DEFINED_MAC_ADDR="f0:ca:f0:ca:01:d5" #Change this for each device 
 
+# Enable rtt logging support #
+# Enable RTT
+CONFIG_USE_SEGGER_RTT=y
+# enable console
+CONFIG_CONSOLE=y
+CONFIG_RTT_CONSOLE=y
+CONFIG_PINCTRL=y
+CONFIG_CBPRINTF_FP_SUPPORT=y
 # Enable logging support #
 CONFIG_LOG=y
 CONFIG_LOG_DEFAULT_LEVEL=1
