FIX : Flashing firmware

--- a/code/broadcaster/boards/arm/lrima_greenhouse_nrf52833/lrima_greenhouse_nrf52833_defconfig
+++ b/code/broadcaster/boards/arm/lrima_greenhouse_nrf52833/lrima_greenhouse_nrf52833_defconfig
@@ -24,3 +24,6 @@ CONFIG_CONSOLE=y
 
 # Enable pin control
 CONFIG_PINCTRL=y
+
+# Enbable clock control support #
+CONFIG_CLOCK_CONTROL_NRF_K32SRC_RC=y
