--- a/code/broadcaster/prj.conf
+++ b/code/broadcaster/prj.conf
@@ -5,12 +5,16 @@ CONFIG_ADC_ASYNC=y
 # Enable GPIO support #
 CONFIG_GPIO=y
 
+# Enbable clock control support #
+CONFIG_CLOCK_CONTROL_NRF_K32SRC_RC=y
+
 # Enable i2c support #
 CONFIG_I2C=y
 
 # Enable support for log
 CONFIG_NEWLIB_LIBC=y # TODO : optimize this
 CONFIG_NEWLIB_LIBC_FLOAT_PRINTF=y
+CONFIG_CBPRINTF_FP_SUPPORT=y
 
 #BLE config
 CONFIG_BT=y
@@ -31,21 +35,21 @@ CONFIG_BLE_MAX_ADV_INTERVAL_MS=40
 CONFIG_BLE_USER_DEFINED_MAC_ADDR="f0:ca:f0:ca:01:d5" #Change this for each device 
 
 # Enable rtt logging support #
-# Enable RTT
 CONFIG_USE_SEGGER_RTT=y
-# enable console
-CONFIG_CONSOLE=y
 CONFIG_RTT_CONSOLE=y
+CONFIG_CONSOLE=y
 CONFIG_PINCTRL=y
-CONFIG_CBPRINTF_FP_SUPPORT=y
+
 # Enable logging support #
 CONFIG_LOG=y
 CONFIG_LOG_DEFAULT_LEVEL=1
 CONFIG_DEBUG_OPTIMIZATIONS=y
 CONFIG_LOG_PRINTK=y
-CONFIG_AHT20_LOG_LEVEL_ERR=y
-CONFIG_ADC_LOG_LEVEL_ERR=y
-# CONFIG_BLE_DRIVER_LOG_LEVEL_ERR=y
-CONFIG_BLE_DRIVER_LOG_LEVEL_INF=y
+CONFIG_AHT20_LOG_LEVEL_INF=y
+CONFIG_ADC_LOG_LEVEL_INF=y
+CONFIG_MAIN_LOG_LEVEL_INF=y
+# CONFIG_AHT20_LOG_LEVEL_ERR=y
+# CONFIG_ADC_LOG_LEVEL_ERR=y
+CONFIG_BLE_DRIVER_LOG_LEVEL_ERR=y
 CONFIG_BT_LOG_LEVEL_OFF=y
 CONFIG_BT_DEBUG_LOG=n
