--- a/code/central-nrf/prj.conf
+++ b/code/central-nrf/prj.conf
@@ -1,6 +1,10 @@
 CONFIG_BT=y
 CONFIG_BT_OBSERVER=y
 
+# Configuring macaddress filter
+CONFIG_BLE_ENABLE_MAC_ADDR_FILTER=y
+CONFIG_BLE_USER_DEFINED_MAC_ADDR_FILTER="F0:CA:F0:CA"
+
 CONFIG_BT_EXT_ADV=y
 CONFIG_BT_EXT_SCAN_BUF_SIZE=1650
 
