ADD - STH20 Drivers

--- a/code/broadcaster/prj.conf
+++ b/code/broadcaster/prj.conf
@@ -20,7 +20,7 @@ CONFIG_CBPRINTF_FP_SUPPORT=y
 CONFIG_BT=y
 CONFIG_BT_EXT_ADV=y
 CONFIG_BT_BROADCASTER=y
-CONFIG_BT_DEVICE_NAME="LRIMa test 1" #Change this for each device (name must end with a number)
+CONFIG_BT_DEVICE_NAME="LRIMa test 4" #Change this for each device (name must end with a number)
 
 # Low power config
 CONFIG_PM=y
@@ -28,11 +28,11 @@ CONFIG_PM_DEVICE=y
 CONFIG_PM_DEVICE_RUNTIME=y
 
 #Custom configs
-CONFIG_SENSOR_SLEEP_DURATION_SEC=300
+CONFIG_SENSOR_SLEEP_DURATION_SEC=30
 CONFIG_BLE_ADV_DURATION_SEC=1
 CONFIG_BLE_MIN_ADV_INTERVAL_MS=30
 CONFIG_BLE_MAX_ADV_INTERVAL_MS=40
-CONFIG_BLE_USER_DEFINED_MAC_ADDR="f0:ca:f0:ca:01:d5" #Change this for each device 
+CONFIG_BLE_USER_DEFINED_MAC_ADDR="f0:ca:f0:ca:2f:1b" #Change this for each device 
 
 # Enable rtt logging support #
 CONFIG_USE_SEGGER_RTT=y
@@ -46,6 +46,7 @@ CONFIG_LOG_DEFAULT_LEVEL=1
 CONFIG_DEBUG_OPTIMIZATIONS=y
 CONFIG_LOG_PRINTK=y
 CONFIG_AHT20_LOG_LEVEL_INF=y
+CONFIG_SHT20_LOG_LEVEL_DBG=y
 CONFIG_ADC_LOG_LEVEL_INF=y
 CONFIG_MAIN_LOG_LEVEL_INF=y
 # CONFIG_AHT20_LOG_LEVEL_ERR=y
