ADD : GATT service to edit the sleep time via BLE

--- a/code/broadcaster/Kconfig
+++ b/code/broadcaster/Kconfig
@@ -9,6 +9,14 @@ config SENSOR_SLEEP_DURATION_SEC
 	int "Sleep duration in seconds bettwen two measurements"
 	default 300
 
+config SENSOR_SLEEP_MODIFICATION_ENABLED
+    bool "Enable sleep duration modification"
+    default y
+
+config SENSOR_SLEEP_DURATION_MAX_SEC
+	int "Maximum sleep duration in seconds bettwen two measurements"
+	default 3600
+
 config BLE_ADV_DURATION_SEC
 	int "Advertising duration in seconds"
 	default 1
@@ -21,10 +29,25 @@ config BLE_MAX_ADV_INTERVAL_MS
 	int "Maximum advertising interval in milliseconds"
 	default 40
 
-config BLE_USER_DEFINED_MAC_ADDR
-	string "Overrides the device's BT address"
+config BLE_USER_DEFINED_BROADCAST_MAC_ADDR
+	string "Overrides the device's BT address for advertising"
 	help
 		This address has to be in this format (e.g.: f0:ca:f0:ca:01:d5).
+
+config BLE_USER_DEFINED_CONN_MAC_ADDR
+	string "Overrides the device's BT address for connections"
+	help
+		This address has to be in this format (e.g.: f1:cb:f0:ca:01:d5).
+
+config BLE_USER_DEFINED_BROADCAST_NAME
+    string "Overrides the device's name for advertising"
+    help
+        This name has to be in this format (e.g.: "LRIMa 1").
+
+config BLE_USER_DEFINED_CONN_NAME
+    string "Overrides the device's name for connections"
+    help
+        This name has to be in this format (e.g.: "LRIMa CONN 1").
 ################################################################################
 # Main module
 
