--- a/code/broadcaster/Kconfig
+++ b/code/broadcaster/Kconfig
@@ -14,6 +14,7 @@ config SENSOR_SLEEP_MODIFICATION_ENABLED
     default y
 
 config SENSOR_SLEEP_DURATION_MAX_SEC
+    depends on SENSOR_SLEEP_MODIFICATION_ENABLED=y
 	int "Maximum sleep duration in seconds bettwen two measurements"
 	default 3600
 
@@ -29,6 +30,14 @@ config BLE_MAX_ADV_INTERVAL_MS
 	int "Maximum advertising interval in milliseconds"
 	default 40
 
+config BLE_CONN_TIMEOUT_SEC
+    int "Connection timeout in seconds"
+    depends on SENSOR_SLEEP_MODIFICATION_ENABLED=y
+    default 60
+    help
+        The connection timeout is the maximum time between two received packets
+        before the connection is considered lost.
+
 config BLE_USER_DEFINED_BROADCAST_MAC_ADDR
 	string "Overrides the device's BT address for advertising"
 	help
@@ -36,6 +45,7 @@ config BLE_USER_DEFINED_BROADCAST_MAC_ADDR
 
 config BLE_USER_DEFINED_CONN_MAC_ADDR
 	string "Overrides the device's BT address for connections"
+    depends on SENSOR_SLEEP_MODIFICATION_ENABLED=y
 	help
 		This address has to be in this format (e.g.: f1:cb:f0:ca:01:d5).
 
@@ -46,6 +56,7 @@ config BLE_USER_DEFINED_BROADCAST_NAME
 
 config BLE_USER_DEFINED_CONN_NAME
     string "Overrides the device's name for connections"
+    depends on SENSOR_SLEEP_MODIFICATION_ENABLED=y
     help
         This name has to be in this format (e.g.: "LRIMa CONN 1").
 ################################################################################
