--- a/code/broadcaster/prj.conf
+++ b/code/broadcaster/prj.conf
@@ -18,7 +18,7 @@ CONFIG_RTT_CONSOLE=y
 # These settings are user-defined and can be adjusted for each device.
 
 # Sensor and BLE Advertising Settings
-CONFIG_SENSOR_SLEEP_DURATION_SEC=300
+CONFIG_SENSOR_SLEEP_DURATION_SEC=20
 CONFIG_BLE_ADV_DURATION_SEC=5
 CONFIG_BLE_MIN_ADV_INTERVAL_MS=30
 CONFIG_BLE_MAX_ADV_INTERVAL_MS=40
@@ -27,7 +27,7 @@ CONFIG_BLE_USER_DEFINED_BROADCAST_NAME="LRIMa 1" # Change this for each device
 
 # Sensor Sleep Modification 
 CONFIG_SENSOR_SLEEP_MODIFICATION_ENABLED=y
-# NOTA : The following four parameters are only used if CONFIG_SENSOR_SLEEP_MODIFICATION_ENABLED=y
+# NOTA : The following five parameters are only used if CONFIG_SENSOR_SLEEP_MODIFICATION_ENABLED=y
 CONFIG_SENSOR_SLEEP_DURATION_MAX_SEC=3600
 # BLE Connection Settings
 CONFIG_BLE_CONN_TIMEOUT_SEC=60
@@ -45,9 +45,11 @@ CONFIG_BT_DEBUG_LOG=n
 
 # Logging Backends
 CONFIG_MAIN_LOG_LEVEL_INF=y
-CONFIG_AHT20_LOG_LEVEL_ERR=y
-CONFIG_ADC_LOG_LEVEL_ERR=y
-CONFIG_BLE_DRIVER_LOG_LEVEL_INF=y
+CONFIG_AHT20_LOG_LEVEL_WRN=y
+CONFIG_ADC_LOG_LEVEL_WRN=y
+CONFIG_BLE_DRIVER_LOG_LEVEL_WRN=y
+CONFIG_BUTTON_LOG_LEVEL_WRN=y
+CONFIG_LED_LOG_LEVEL_WRN=y
 
 # Support for log
 CONFIG_NEWLIB_LIBC=y # TODO: optimize this
@@ -74,6 +76,8 @@ CONFIG_BT_ID_MAX=2
 CONFIG_MCUMGR=y
 CONFIG_MCUMGR_CMD_IMG_MGMT=y
 CONFIG_MCUMGR_CMD_OS_MGMT=y
+CONFIG_MCUMGR_MGMT_NOTIFICATION_HOOKS=y
+CONFIG_MCUMGR_SMP_COMMAND_STATUS_HOOKS=y
 CONFIG_BOOTLOADER_MCUBOOT=y
 CONFIG_BT_L2CAP_TX_MTU=252
 CONFIG_BT_BUF_ACL_RX_SIZE=256
