--- a/code/broadcaster/prj_release.conf
+++ b/code/broadcaster/prj_release.conf
@@ -23,7 +23,7 @@ CONFIG_BLE_ADV_DURATION_SEC=5
 CONFIG_BLE_MIN_ADV_INTERVAL_MS=30
 CONFIG_BLE_MAX_ADV_INTERVAL_MS=40
 CONFIG_BLE_USER_DEFINED_BROADCAST_MAC_ADDR="f0:ca:f0:ca:01:d5" # Change this for each device
-CONFIG_BLE_USER_DEFINED_BROADCAST_NAME="LRIMa 2" # Change this for each device
+CONFIG_BLE_USER_DEFINED_BROADCAST_NAME="LRIMa 1" # Change this for each device
 
 # Sensor Sleep Modification 
 CONFIG_SENSOR_SLEEP_MODIFICATION_ENABLED=y
@@ -32,22 +32,24 @@ CONFIG_SENSOR_SLEEP_DURATION_MAX_SEC=3600
 # BLE Connection Settings
 CONFIG_BLE_CONN_TIMEOUT_SEC=60
 CONFIG_BLE_USER_DEFINED_CONN_MAC_ADDR="f1:cb:f0:ca:01:d5" # Change this for each device
-CONFIG_BLE_USER_DEFINED_CONN_NAME="LRIMa conn 2" # Change this for each device
+CONFIG_BLE_USER_DEFINED_CONN_NAME="LRIMa conn 1" # Change this for each device
 
 #==============================================================================
 # Logging Configuration
 #==============================================================================
-CONFIG_LOG=n
+CONFIG_LOG=y
 CONFIG_LOG_DEFAULT_LEVEL=1
 CONFIG_DEBUG_OPTIMIZATIONS=y
 CONFIG_BT_LOG_LEVEL_OFF=y
 CONFIG_BT_DEBUG_LOG=n
 
 # Logging Backends
-CONFIG_MAIN_LOG_LEVEL_INF=y
+CONFIG_MAIN_LOG_LEVEL_ERR=y
 CONFIG_AHT20_LOG_LEVEL_ERR=y
 CONFIG_ADC_LOG_LEVEL_ERR=y
-CONFIG_BLE_DRIVER_LOG_LEVEL_INF=y
+CONFIG_BLE_DRIVER_LOG_LEVEL_ERR=y
+CONFIG_BUTTON_LOG_LEVEL_ERR=y
+CONFIG_LED_LOG_LEVEL_ERR=y
 
 # Support for log
 CONFIG_NEWLIB_LIBC=y # TODO: optimize this
@@ -74,13 +76,14 @@ CONFIG_BT_ID_MAX=2
 CONFIG_MCUMGR=y
 CONFIG_MCUMGR_CMD_IMG_MGMT=y
 CONFIG_MCUMGR_CMD_OS_MGMT=y
+CONFIG_MCUMGR_MGMT_NOTIFICATION_HOOKS=y
+CONFIG_MCUMGR_SMP_COMMAND_STATUS_HOOKS=y
 CONFIG_BOOTLOADER_MCUBOOT=y
 CONFIG_BT_L2CAP_TX_MTU=252
 CONFIG_BT_BUF_ACL_RX_SIZE=256
 CONFIG_MCUMGR_SMP_BT=y
 CONFIG_MCUMGR_SMP_BT_AUTHEN=n
 CONFIG_SYSTEM_WORKQUEUE_STACK_SIZE=4096
-CONFIG_DISABLE_FLASH_PATCH=y
 
 #==============================================================================
 # Size Optimization and Multithreading
