--- a/code/broadcaster/prj.conf
+++ b/code/broadcaster/prj.conf
@@ -20,6 +20,7 @@ CONFIG_RTT_CONSOLE=y
 # Sensor and BLE Advertising Settings
 CONFIG_SENSOR_SLEEP_DURATION_SEC=300
 CONFIG_BLE_ADV_DURATION_SEC=5
+CONFIG_BLE_DFU_ADV_DURATION_SEC=60
 CONFIG_BLE_MIN_ADV_INTERVAL_MS=30
 CONFIG_BLE_MAX_ADV_INTERVAL_MS=40
 CONFIG_BLE_USER_DEFINED_BROADCAST_MAC_ADDR="f0:ca:f0:ca:01:d5" # Change this for each device
