--- a/code/central-nrf/prj.conf
+++ b/code/central-nrf/prj.conf
@@ -7,6 +7,7 @@ CONFIG_BLE_USER_DEFINED_MAC_ADDR_FILTER="F0:CA:F0:CA"
 
 CONFIG_BT_EXT_ADV=y
 CONFIG_BT_EXT_SCAN_BUF_SIZE=1650
+CONFIG_BT_CTLR_PHY_CODED=y
 
 # Advertising Report for receiving the complete 1650 bytes of data
 CONFIG_BT_BUF_EVT_RX_COUNT=16
@@ -16,6 +17,7 @@ CONFIG_BT_CTLR_SCAN_DATA_LEN_MAX=1650
 CONFIG_BT_CTLR_RX_BUFFERS=9
 
 #Enable Debugging on nrf52840dongle
+CONFIG_USB_CDC_ACM=y
 CONFIG_USB_DEVICE_INITIALIZE_AT_BOOT=y
 CONFIG_USB_DEVICE_STACK=y
 CONFIG_USB_DEVICE_PRODUCT="Zephyr USB BLE Reciever"
@@ -25,13 +27,31 @@ CONFIG_SHELL=y
 CONFIG_CONSOLE=y
 CONFIG_UART_LINE_CTRL=y
 CONFIG_UART_INTERRUPT_DRIVEN=y
-CONFIG_UART_ASYNC_API=n
+CONFIG_UART_ASYNC_API=y
 
 # Increase the UART TX buffer size
-CONFIG_UART_0_NRF_TX_BUFFER_SIZE=1024
+CONFIG_UART_0_NRF_TX_BUFFER_SIZE=2048
+CONFIG_UART_1_NRF_TX_BUFFER_SIZE=2048
 
 # Enable logging
 CONFIG_LOG=y
+CONFIG_NEWLIB_LIBC=y # TODO: optimize this
+CONFIG_NEWLIB_LIBC_FLOAT_PRINTF=y
+CONFIG_CBPRINTF_FP_SUPPORT=y
 CONFIG_LOG_BUFFER_SIZE=4096
 CONFIG_MAIN_LOG_LEVEL_DBG=y
 CONFIG_USB_CDC_ACM_LOG_LEVEL_ERR=y
+
+# Enable GPIO
+CONFIG_GPIO=y
+
+# Config for physical UART
+CONFIG_SERIAL=y
+CONFIG_UART_NRFX=y
+CONFIG_UART_1_ASYNC=y
+CONFIG_UART_1_INTERRUPT_DRIVEN=n
+CONFIG_UART_1_NRF_HW_ASYNC=y
+CONFIG_UART_1_NRF_HW_ASYNC_TIMER=2
+
+
+
