--- a/code/broadcaster/prj.conf
+++ b/code/broadcaster/prj.conf
@@ -19,6 +19,7 @@ CONFIG_RTT_CONSOLE=y
 
 # Sensor and BLE Advertising Settings
 CONFIG_SENSOR_SLEEP_DURATION_SEC=300
+CONFIG_BLE_ADV_USE_CODED_PHY=n
 CONFIG_BLE_ADV_DURATION_SEC=5
 CONFIG_BLE_DFU_ADV_DURATION_SEC=60
 CONFIG_BLE_MIN_ADV_INTERVAL_MS=30
@@ -60,6 +61,7 @@ CONFIG_CBPRINTF_FP_SUPPORT=y
 #==============================================================================
 CONFIG_BT=y
 CONFIG_BT_EXT_ADV=y
+CONFIG_BT_CTLR_PHY_CODED=n
 CONFIG_BT_EXT_ADV_MAX_ADV_SET=2
 CONFIG_BT_PERIPHERAL=y
 CONFIG_BT_BROADCASTER=y
