MOD : Auto switch i2c and ADD : SHT21 SHT31

--- a/code/broadcaster/CMakeLists.txt
+++ b/code/broadcaster/CMakeLists.txt
@@ -19,6 +19,8 @@ SET(UTILS_C
 # Add drivers source files
 SET(DRIVERS_H
     src/drivers/aht20.h
+    src/drivers/sht20.h
+    src/drivers/sht31.h
     src/drivers/adc.h
     src/drivers/ble.h
     src/drivers/button.h
@@ -26,6 +28,8 @@ SET(DRIVERS_H
     )
 SET(DRIVERS_C
     src/drivers/aht20.c
+    src/drivers/sht20.c
+    src/drivers/sht31.c
     src/drivers/adc.c
     src/drivers/ble.c
     src/drivers/button.c
