--- a/code/broadcaster/Kconfig
+++ b/code/broadcaster/Kconfig
@@ -436,3 +436,127 @@ config LED_LOG_LEVEL
 endmenu
 
 ################################################################################
+# sht31 module
+
+menu "SHT31 module"
+
+########################################
+# SHT31 Logging
+
+choice SHT31_LOG_LEVEL_CHOICE
+    prompt "Log level"
+    depends on LOG
+    default SHT31_LOG_LEVEL_INF
+    help
+        Message severity threshold for logging. This option controls which
+        severities of messages are displayed and which ones are suppressed.
+        Messages can have 4 severity levels - debug, info, warning, and error -
+        in that order of increasing severity. Messages below the configured
+        severity threshold are suppressed.
+
+config SHT31_LOG_LEVEL_OFF
+    bool "Off"
+    help
+        Do not log messages. No messages are displayed. Messages of all severity
+        levels are suppressed.
+
+config SHT31_LOG_LEVEL_ERR
+    bool "Error"
+    help
+        Log up to error messages. Error messages are displayed. Warning, info,
+        and debug messages are suppressed.
+
+config SHT31_LOG_LEVEL_WRN
+    bool "Warning"
+    help
+        Log up to warning messages. Error and warning messages are displayed.
+        Info and debug messages are suppressed.
+
+config SHT31_LOG_LEVEL_INF
+    bool "Info"
+    help
+        Log up to info messages. Error, warning, and info messages are
+        displayed. Debug messages are suppressed.
+
+config SHT31_LOG_LEVEL_DBG
+    bool "Debug"
+    help
+        Log up to debug messages. Messages of all severity levels are displayed.
+        No messages are suppressed.
+
+endchoice
+
+config SHT31_LOG_LEVEL
+    int
+    depends on LOG
+    default 0 if SHT31_LOG_LEVEL_OFF
+    default 1 if SHT31_LOG_LEVEL_ERR
+    default 2 if SHT31_LOG_LEVEL_WRN
+    default 3 if SHT31_LOG_LEVEL_INF
+    default 4 if SHT31_LOG_LEVEL_DBG
+
+endmenu
+
+################################################################################
+# sht20 module
+
+menu "SHT20 module"
+
+########################################
+# SHT20 Logging
+
+choice SHT20_LOG_LEVEL_CHOICE
+    prompt "Log level"
+    depends on LOG
+    default SHT20_LOG_LEVEL_INF
+    help
+        Message severity threshold for logging. This option controls which
+        severities of messages are displayed and which ones are suppressed.
+        Messages can have 4 severity levels - debug, info, warning, and error -
+        in that order of increasing severity. Messages below the configured
+        severity threshold are suppressed.
+
+config SHT20_LOG_LEVEL_OFF
+    bool "Off"
+    help
+        Do not log messages. No messages are displayed. Messages of all severity
+        levels are suppressed.
+
+config SHT20_LOG_LEVEL_ERR
+    bool "Error"
+    help
+        Log up to error messages. Error messages are displayed. Warning, info,
+        and debug messages are suppressed.
+
+config SHT20_LOG_LEVEL_WRN
+    bool "Warning"
+    help
+        Log up to warning messages. Error and warning messages are displayed.
+        Info and debug messages are suppressed.
+
+config SHT20_LOG_LEVEL_INF
+    bool "Info"
+    help
+        Log up to info messages. Error, warning, and info messages are
+        displayed. Debug messages are suppressed.
+
+config SHT20_LOG_LEVEL_DBG
+    bool "Debug"
+    help
+        Log up to debug messages. Messages of all severity levels are displayed.
+        No messages are suppressed.
+
+endchoice
+
+config SHT20_LOG_LEVEL
+    int
+    depends on LOG
+    default 0 if SHT20_LOG_LEVEL_OFF
+    default 1 if SHT20_LOG_LEVEL_ERR
+    default 2 if SHT20_LOG_LEVEL_WRN
+    default 3 if SHT20_LOG_LEVEL_INF
+    default 4 if SHT20_LOG_LEVEL_DBG
+
+endmenu
+
+################################################################################
