--- a/code/broadcaster/prj.conf
+++ b/code/broadcaster/prj.conf
@@ -5,6 +5,7 @@ CONFIG_GPIO_AS_PINRESET=y
 CONFIG_ADC=y
 CONFIG_ADC_ASYNC=y
 CONFIG_I2C=y
+CONFIG_SENSOR=y
 CONFIG_PM=y
 CONFIG_PM_DEVICE=y
 CONFIG_PM_DEVICE_RUNTIME=y
@@ -46,6 +47,8 @@ CONFIG_BT_DEBUG_LOG=n
 # Logging Backends
 CONFIG_MAIN_LOG_LEVEL_INF=y
 CONFIG_AHT20_LOG_LEVEL_WRN=y
+CONFIG_SHT20_LOG_LEVEL_WRN=y
+CONFIG_SHT31_LOG_LEVEL_WRN=y
 CONFIG_ADC_LOG_LEVEL_WRN=y
 CONFIG_BLE_DRIVER_LOG_LEVEL_DBG=y
 CONFIG_BUTTON_LOG_LEVEL_WRN=y
