MOD : Readme actioneur

--- a/code/actionneur/platformio.ini
+++ b/code/actionneur/platformio.ini
@@ -19,6 +19,8 @@ lib_deps =
 	bblanchon/ArduinoJson@^6.21.0
 	links2004/WebSockets@^2.3.7
     https://github.com/ALIVEcode/aliot-c.git
+    arduino-libraries/ArduinoHttpClient
+    WiFiClientSecure
     
 [env:esp8266]
 platform = espressif8266
@@ -29,6 +31,8 @@ lib_deps =
     bblanchon/ArduinoJson@^6.21.0
     links2004/WebSockets@^2.3.7
     https://github.com/ALIVEcode/aliot-c.git
+    arduino-libraries/ArduinoHttpClient
+    WiFiClientSecure
 
 [env:native]
 platform = native
@@ -37,4 +41,6 @@ lib_deps =
     bblanchon/ArduinoJson@^6.21.0
     links2004/WebSockets@^2.3.7
     https://github.com/ALIVEcode/aliot-c.git
+    arduino-libraries/ArduinoHttpClient
+    WiFiClientSecure
 
