FIX - Bug with ksleep before init aht

--- a/code/broadcaster/prj.conf
+++ b/code/broadcaster/prj.conf
@@ -25,8 +25,8 @@ CONFIG_BLE_ADV_DURATION_SEC=5
 CONFIG_BLE_DFU_ADV_DURATION_SEC=60
 CONFIG_BLE_MIN_ADV_INTERVAL_MS=30
 CONFIG_BLE_MAX_ADV_INTERVAL_MS=40
-CONFIG_BLE_USER_DEFINED_MAC_ADDR="f0:ca:f0:ca:01:d5" # Change this for each device
-CONFIG_BLE_USER_DEFINED_NAME="LRIMa 00" # Change this for each device
+CONFIG_BLE_USER_DEFINED_MAC_ADDR="f0:ca:f0:ca:db:f3" # Change this for each device
+CONFIG_BLE_USER_DEFINED_NAME="LRIMa 35" # Change this for each device
 
 # Sensor Sleep Modification 
 CONFIG_SENSOR_SLEEP_MODIFICATION_ENABLED=y
