--- a/code/broadcaster/prj.conf
+++ b/code/broadcaster/prj.conf
@@ -25,7 +25,7 @@ CONFIG_BLE_ADV_DURATION_SEC=5
 CONFIG_BLE_DFU_ADV_DURATION_SEC=60
 CONFIG_BLE_MIN_ADV_INTERVAL_MS=30
 CONFIG_BLE_MAX_ADV_INTERVAL_MS=40
-CONFIG_BLE_USER_DEFINED_MAC_ADDR="f0:ca:f0:ca:db:f3" # Change this for each device
+CONFIG_BLE_USER_DEFINED_MAC_ADDR="f0:ca:f0:ca:7d:2a" # Change this for each device
 CONFIG_BLE_USER_DEFINED_NAME="LRIMa 35" # Change this for each device
 
 # Sensor Sleep Modification 
@@ -46,10 +46,10 @@ CONFIG_BT_DEBUG_LOG=n
 
 # Logging Backends
 CONFIG_MAIN_LOG_LEVEL_INF=y
-CONFIG_AHT20_LOG_LEVEL_WRN=y
-CONFIG_SHT20_LOG_LEVEL_WRN=y
-CONFIG_SHT31_LOG_LEVEL_WRN=y
-CONFIG_ADC_LOG_LEVEL_WRN=y
+CONFIG_AHT20_LOG_LEVEL_DBG=y
+CONFIG_SHT20_LOG_LEVEL_DBG=y
+CONFIG_SHT31_LOG_LEVEL_DBG=y
+CONFIG_ADC_LOG_LEVEL_DBG=y
 CONFIG_BLE_DRIVER_LOG_LEVEL_DBG=y
 CONFIG_BUTTON_LOG_LEVEL_WRN=y
 CONFIG_LED_LOG_LEVEL_WRN=y
