--- a/code/broadcaster/prj.conf
+++ b/code/broadcaster/prj.conf
@@ -25,8 +25,8 @@ CONFIG_BLE_ADV_DURATION_SEC=5
 CONFIG_BLE_DFU_ADV_DURATION_SEC=60
 CONFIG_BLE_MIN_ADV_INTERVAL_MS=30
 CONFIG_BLE_MAX_ADV_INTERVAL_MS=40
-CONFIG_BLE_USER_DEFINED_MAC_ADDR="f0:ca:f0:ca:7d:2a" # Change this for each device
-CONFIG_BLE_USER_DEFINED_NAME="LRIMa 35" # Change this for each device
+CONFIG_BLE_USER_DEFINED_MAC_ADDR="f0:ca:f0:ca:01:d4" # Change this for each device
+CONFIG_BLE_USER_DEFINED_NAME="LRIMa 39" # Change this for each device
 
 # Sensor Sleep Modification 
 CONFIG_SENSOR_SLEEP_MODIFICATION_ENABLED=y
@@ -38,7 +38,7 @@ CONFIG_BLE_CONN_TIMEOUT_SEC=60
 #==============================================================================
 # Logging Configuration
 #==============================================================================
-CONFIG_LOG=y
+CONFIG_LOG=n
 CONFIG_LOG_DEFAULT_LEVEL=1
 CONFIG_DEBUG_OPTIMIZATIONS=y
 CONFIG_BT_LOG_LEVEL_OFF=y
@@ -46,10 +46,10 @@ CONFIG_BT_DEBUG_LOG=n
 
 # Logging Backends
 CONFIG_MAIN_LOG_LEVEL_INF=y
-CONFIG_AHT20_LOG_LEVEL_DBG=y
-CONFIG_SHT20_LOG_LEVEL_DBG=y
-CONFIG_SHT31_LOG_LEVEL_DBG=y
-CONFIG_ADC_LOG_LEVEL_DBG=y
+CONFIG_AHT20_LOG_LEVEL_WRN=y
+CONFIG_SHT20_LOG_LEVEL_WRN=y
+CONFIG_SHT31_LOG_LEVEL_WRN=y
+CONFIG_ADC_LOG_LEVEL_WRN=y
 CONFIG_BLE_DRIVER_LOG_LEVEL_DBG=y
 CONFIG_BUTTON_LOG_LEVEL_WRN=y
 CONFIG_LED_LOG_LEVEL_WRN=y
