ADD : 5 Relay Board

--- a/code/actionneur/platformio.ini
+++ b/code/actionneur/platformio.ini
@@ -10,7 +10,7 @@
 
 [env:esp32]
 platform = espressif32
-board = ttgo-lora32-v1
+board = esp-wrover-kit
 framework = arduino
 monitor_speed = 115200
 test_framework = unity
@@ -18,29 +18,28 @@ test_ignore = test_desktop
 lib_deps = 
 	bblanchon/ArduinoJson@^6.21.0
 	links2004/WebSockets@^2.3.7
-    https://github.com/ALIVEcode/aliot-c.git
-    arduino-libraries/ArduinoHttpClient
-    WiFiClientSecure
-    
+	https://github.com/ALIVEcode/aliot-c.git
+	arduino-libraries/ArduinoHttpClient
+	WiFiClientSecure
+
 [env:esp8266]
 platform = espressif8266
 board = d1_mini
 framework = arduino
 monitor_speed = 115200
 lib_deps = 
-    bblanchon/ArduinoJson@^6.21.0
-    links2004/WebSockets@^2.3.7
-    https://github.com/ALIVEcode/aliot-c.git
-    arduino-libraries/ArduinoHttpClient
-    WiFiClientSecure
+	bblanchon/ArduinoJson@^6.21.0
+	links2004/WebSockets@^2.3.7
+	https://github.com/ALIVEcode/aliot-c.git
+	arduino-libraries/ArduinoHttpClient
+	WiFiClientSecure
 
 [env:native]
 platform = native
 test_ignore = test_embedded
 lib_deps = 
-    bblanchon/ArduinoJson@^6.21.0
-    links2004/WebSockets@^2.3.7
-    https://github.com/ALIVEcode/aliot-c.git
-    arduino-libraries/ArduinoHttpClient
-    WiFiClientSecure
-
+	bblanchon/ArduinoJson@^6.21.0
+	links2004/WebSockets@^2.3.7
+	https://github.com/ALIVEcode/aliot-c.git
+	arduino-libraries/ArduinoHttpClient
+	WiFiClientSecure
