Add multiple SSID for the relay connection

--- a/code/actionneur/include/SECRET.h.example
+++ b/code/actionneur/include/SECRET.h.example
@@ -6,8 +6,8 @@
 */
 
 // Setup wifi credentials
-#define SSID "SSID"
-#define PASSWORD "PASSWORD"
+std::vector<std::string> SSID = {"SSID1", "SSID2"};
+std::vector<std::string> PASSWORD = {"PASSWORD1", "PASSWORD2"};
 
 // Setup aliot credentials
 #define AUTH_TOKEN "AUTH_TOKEN"
