Fix SECRET.h .example

--- a/code/actionneur/include/SECRET.h.example
+++ b/code/actionneur/include/SECRET.h.example
@@ -9,6 +9,9 @@
 std::vector<std::string> SSID = {"SSID1", "SSID2"};
 std::vector<std::string> PASSWORD = {"PASSWORD1", "PASSWORD2"};
 
+#define SSID "SSID"
+#define PASSWORD "PASSWORD"
+
 // Setup aliot credentials
 #define AUTH_TOKEN "AUTH_TOKEN"
 #define OBJECT_ID "OBJECT_ID"
